--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,35 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/qryxip/bikecase"
 
 [dependencies]
+anyhow = "1.0.27"
+atty = "0.2.14"
+cargo_metadata = "0.9.1"
+diff = "0.1.12"
+dirs = "2.0.2"
+duct = "0.13.3"
+if_chain = "1.0.0"
+ignore = "0.4.11"
+indexmap = { version = "1.3.2", features = ["serde-1"] }
+itertools = "0.9.0"
+log = "0.4.8"
+once_cell = "1.3.1"
+proc-macro2 = { version = "1.0.9", default-features = false, features = ["span-locations"] }
+pulldown-cmark = "0.7.0"
+remove_dir_all = "0.5.2"
+rpassword = "4.0.5"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.48"
+shell-escape = "0.1.4"
+shellexpand = "2.0.0"
+structopt = "0.3.11"
+strum = { version = "0.18.0", features = ["derive"] }
+syn = "1.0.16"
+termcolor = "1.1.0"
+toml = "0.5.6"
+toml_edit = "0.1.5"
+ureq = { version = "0.12.0", default-features = false, features = ["json", "tls"] }
+url = "2.1.1"
+
+[target.'cfg(windows)'.dependencies]
+winapi = "0.3.8"
+winapi-util = "0.1.3"
