--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ repository = "https://github.com/qryxip/bikecase"
 anyhow = "1.0.27"
 atty = "0.2.14"
 cargo_metadata = "0.9.1"
+derivative = "2.0.2"
 diff = "0.1.12"
 dirs = "2.0.2"
 duct = "0.13.3"
 if_chain = "1.0.0"
-ignore = "0.4.11"
+ignore = "0.4.12"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
 itertools = "0.9.0"
 log = "0.4.8"
@@ -38,6 +39,7 @@ syn = "1.0.16"
 termcolor = "1.1.0"
 toml = "0.5.6"
 toml_edit = "0.1.5"
+unicode-width = "0.1.7"
 ureq = { version = "0.12.0", default-features = false, features = ["json", "tls"] }
 url = "2.1.1"
 
