--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ diff = "0.1.12"
 dirs = "2.0.2"
 duct = "0.13.3"
 if_chain = "1.0.0"
-ignore = "0.4.12"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
 itertools = "0.9.0"
 log = "0.4.8"
+maplit = "1.0.2"
 once_cell = "1.3.1"
 proc-macro2 = { version = "1.0.9", default-features = false, features = ["span-locations"] }
 pulldown-cmark = "0.7.0"
