--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ diff = "0.1.12"
 dirs = "2.0.2"
 duct = "0.13.3"
 if_chain = "1.0.0"
+ignore = "0.4.12"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
 itertools = "0.9.0"
 log = "0.4.8"
@@ -29,13 +30,13 @@ proc-macro2 = { version = "1.0.9", default-features = false, features = ["span-l
 pulldown-cmark = "0.7.0"
 remove_dir_all = "0.5.2"
 rpassword = "4.0.5"
-serde = { version = "1.0.104", features = ["derive"] }
+serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 shell-escape = "0.1.4"
 shellexpand = "2.0.0"
-structopt = "0.3.11"
+structopt = "0.3.12"
 strum = { version = "0.18.0", features = ["derive"] }
-syn = "1.0.16"
+syn = "1.0.17"
 termcolor = "1.1.0"
 toml = "0.5.6"
 toml_edit = "0.1.5"
