--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ toml_edit = "0.1.5"
 unicode-width = "0.1.7"
 ureq = { version = "0.12.0", default-features = false, features = ["json", "tls"] }
 url = "2.1.1"
+which = { version = "3.1.1", default-features = false }
